# escultor3D

./: .gitignore  CMakeLists.txt  README.md  main.cpp  readfile.cpp  readfile.h  sculptor.cpp  sculptor.h
source/: main.cpp  sculptor.cpp
